--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,15 +1,19 @@
 Changelog
 =========
 
+1.1.1-dev (unreleased)
+----------------------
+
+
 1.1 (June 28, 2013)
------------------------
+-------------------
 
 - Possibility to register custom templates for rendering the
   python script's results
   [kurazu]
 
 1.0.1 (June 25, 2013)
---------------------
+---------------------
 
 - Not displaying the portlet at all when there's no results
   items returned
